manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rps-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rps
  template:
    metadata:
      labels:
        app: rps
    spec:
      containers:
      - name: rps-container
        image: hukayu/rps-web-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rps-service
  namespace: default
  labels:
    app.kubernetes.io/instance: myapp
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: rps
  type: LoadBalancer
