service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: rps
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8088 # Change this to a different port that is not being used by Jenkins
  type: ClusterIP
